# PointCloudComparator

./: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  README.md~
include/: comparator.h  segmentation.h
include/pcl/PointCloudComparator/: visua.hpp  visua.hpp~  visua.h~
src/: comparator.cpp  featureExtractor.cpp  featureExtractor.cpp~  key.txt  segmentation.cpp  visua (copia).cpp  visua.cpp  visuaOld.cpp
